--- a/DirectXPanels/DirectXPanels.vcxproj.filters
+++ b/DirectXPanels/DirectXPanels.vcxproj.filters
@@ -1,49 +1,53 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Resources">
-      <UniqueIdentifier>08e68157-65cd-4010-9d75-525d6c62f20f</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
     <Filter Include="Common">
-      <UniqueIdentifier>{5206e204-d2aa-494b-9744-bb560caa17ee}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Shaders">
-      <UniqueIdentifier>{32d45bca-e04e-4ebe-bb72-71fbadf627ee}</UniqueIdentifier>
+      <UniqueIdentifier>{6dece7f1-fe55-461e-a884-fdfccef95a7b}</UniqueIdentifier>
     </Filter>
     <Filter Include="Content">
-      <UniqueIdentifier>{b30b5732-3f15-44de-a4a1-558e79e46f40}</UniqueIdentifier>
+      <UniqueIdentifier>{ffc571cd-c9c1-4899-b6cd-741feb9b3501}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="pch.cpp" />
-    <ClCompile Include="D3DPanel.cpp" />
-    <ClCompile Include="DirectXPanelBase.cpp">
+    <ClCompile Include="Common\DeviceResources.cpp">
       <Filter>Common</Filter>
     </ClCompile>
+    <ClCompile Include="Content\Sample3DSceneRenderer.cpp">
+      <Filter>Content</Filter>
+    </ClCompile>
+    <ClCompile Include="Content\SampleFpsTextRenderer.cpp">
+      <Filter>Content</Filter>
+    </ClCompile>
+    <ClCompile Include="pch.cpp" />
+    <ClCompile Include="_3DRotationsMain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Common\DeviceResources.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="Common\DirectXHelper.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="Common\StepTimer.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="Content\Sample3DSceneRenderer.h">
+      <Filter>Content</Filter>
+    </ClInclude>
+    <ClInclude Include="Content\SampleFpsTextRenderer.h">
+      <Filter>Content</Filter>
+    </ClInclude>
+    <ClInclude Include="Content\ShaderStructures.h">
+      <Filter>Content</Filter>
+    </ClInclude>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="D3DPanel.h" />
-    <ClInclude Include="DirectXHelper.h">
-      <Filter>Common</Filter>
-    </ClInclude>
-    <ClInclude Include="DirectXPanelBase.h">
-      <Filter>Common</Filter>
-    </ClInclude>
-    <ClInclude Include="StepTimer.h">
-      <Filter>Common</Filter>
-    </ClInclude>
-    <ClInclude Include="ShaderStructures.h">
-      <Filter>Common</Filter>
-    </ClInclude>
+    <ClInclude Include="_3DRotationsMain.h" />
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="SimplePixelShader.hlsl">
-      <Filter>Shaders</Filter>
-    </FxCompile>
-    <FxCompile Include="SimpleVertexShader.hlsl">
-      <Filter>Shaders</Filter>
-    </FxCompile>
+    <Page Include="DirectXPage.xaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="SamplePixelShader.hlsl" />
+    <FxCompile Include="SampleVertexShader.hlsl" />
   </ItemGroup>
 </Project>
