--- a/RotationApp/RotationApp.csproj
+++ b/RotationApp/RotationApp.csproj
@@ -161,6 +161,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.13</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.UI.Xaml">
+      <Version>2.7.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DirectXPanels\DirectXPanels.vcxproj">
