--- a/DirectXPanels/DirectXPanels.vcxproj
+++ b/DirectXPanels/DirectXPanels.vcxproj
@@ -28,8 +28,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Common\DeviceResources.cpp" />
-    <ClCompile Include="Content\Sample3DSceneRenderer.cpp" />
-    <ClCompile Include="Content\SampleFpsTextRenderer.cpp" />
+    <ClCompile Include="Content\SceneRenderer.cpp" />
+    <ClCompile Include="Content\FpsTextRenderer.cpp" />
     <ClCompile Include="DirectXPage.xaml.cpp">
       <DependentUpon>DirectXPage.xaml</DependentUpon>
     </ClCompile>
@@ -42,8 +42,8 @@
     <ClInclude Include="Common\DeviceResources.h" />
     <ClInclude Include="Common\DirectXHelper.h" />
     <ClInclude Include="Common\StepTimer.h" />
-    <ClInclude Include="Content\Sample3DSceneRenderer.h" />
-    <ClInclude Include="Content\SampleFpsTextRenderer.h" />
+    <ClInclude Include="Content\SceneRenderer.h" />
+    <ClInclude Include="Content\FpsTextRenderer.h" />
     <ClInclude Include="Content\ShaderStructures.h" />
     <ClInclude Include="DirectXPage.xaml.h">
       <DependentUpon>DirectXPage.xaml</DependentUpon>
