--- a/DirectXPanels/DirectXPanels.vcxproj.filters
+++ b/DirectXPanels/DirectXPanels.vcxproj.filters
@@ -12,10 +12,10 @@
     <ClCompile Include="Common\DeviceResources.cpp">
       <Filter>Common</Filter>
     </ClCompile>
-    <ClCompile Include="Content\Sample3DSceneRenderer.cpp">
+    <ClCompile Include="Content\SceneRenderer.cpp">
       <Filter>Content</Filter>
     </ClCompile>
-    <ClCompile Include="Content\SampleFpsTextRenderer.cpp">
+    <ClCompile Include="Content\FpsTextRenderer.cpp">
       <Filter>Content</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp" />
@@ -31,10 +31,10 @@
     <ClInclude Include="Common\StepTimer.h">
       <Filter>Common</Filter>
     </ClInclude>
-    <ClInclude Include="Content\Sample3DSceneRenderer.h">
+    <ClInclude Include="Content\SceneRenderer.h">
       <Filter>Content</Filter>
     </ClInclude>
-    <ClInclude Include="Content\SampleFpsTextRenderer.h">
+    <ClInclude Include="Content\FpsTextRenderer.h">
       <Filter>Content</Filter>
     </ClInclude>
     <ClInclude Include="Content\ShaderStructures.h">
