--- a/DirectXPanels/DirectXPanels.vcxproj
+++ b/DirectXPanels/DirectXPanels.vcxproj
@@ -33,6 +33,7 @@
     <ClCompile Include="DirectXPage.xaml.cpp">
       <DependentUpon>DirectXPage.xaml</DependentUpon>
     </ClCompile>
+    <ClCompile Include="Meshes.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
@@ -48,6 +49,7 @@
     <ClInclude Include="DirectXPage.xaml.h">
       <DependentUpon>DirectXPage.xaml</DependentUpon>
     </ClInclude>
+    <ClInclude Include="Meshes.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="_3DRotationsMain.h" />
   </ItemGroup>
