fix index and vertex buffer

--- a/DirectXPanels/DirectXPanels.vcxproj.filters
+++ b/DirectXPanels/DirectXPanels.vcxproj.filters
@@ -85,6 +85,9 @@
     <ClInclude Include="Meshes.h">
       <Filter>Rendering\World</Filter>
     </ClInclude>
+    <ClInclude Include="Framework\World\Floor.h">
+      <Filter>Rendering\World</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="PixelShader.hlsl">
