--- a/DirectXPanels/DirectXPanels.vcxproj
+++ b/DirectXPanels/DirectXPanels.vcxproj
@@ -55,6 +55,7 @@
     <ClInclude Include="DirectXPage.xaml.h">
       <DependentUpon>DirectXPage.xaml</DependentUpon>
     </ClInclude>
+    <ClInclude Include="Framework\World\Floor.h" />
     <ClInclude Include="Meshes.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="pch.h" />
